--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ logging.level.org.hibernate.SQL=debug
 
 # Oracle settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:49161:xe
-spring.datasource.username=jorge
-spring.datasource.password=jorge
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
